# interesting-algorithms

./: .browserslistrc  .gitignore  README.md  package-lock.json  package.json  vue.config.js
.github/workflows/: githubPagesDeploy.yml  node.js.yml
docs/: index.html
docs/css/: 124.0f5a4c8f.css  126.861bf014.css  135.819b1e6f.css  138.c81afdd3.css  155.d2346609.css  172.9938e010.css  179.ffbe115b.css  240.f6cf8224.css  275.9a4063b0.css  277.8a275ef3.css  280.317539f3.css  299.c6d7602c.css  302.0ebbab9d.css  31.d6e98c12.css  311.2d4ddba1.css  317.ecf57eaa.css  331.eecbfb99.css  332.64101101.css  376.79dc2dc9.css  449.6f03d5d0.css  456.43e20ddb.css  491.94a352ab.css  494.6b1b833d.css  512.a2fb2c5c.css  568.5ee06293.css  571.7d715af7.css  573.82f7c3f6.css  58.bd40f48b.css  585.9fe72977.css  589.da4ab92a.css  618.2f2a8a8d.css  62.8f741df5.css  622.db8df347.css  672.70e6cab1.css  678.6415b830.css  7.888ec45e.css  716.95f6531a.css  726.e075fae7.css  727.5720e0bc.css  730.80dbc81e.css  (+27 more)
docs/js/: 111-legacy.2f57d557.js  111-legacy.2f57d557.js.map  111-legacy.49cdc959.js  111-legacy.8feec546.js  111-legacy.8feec546.js.map  111-legacy.aa07d915.js  111.053de057.js  111.053de057.js.map  111.62cca7d1.js  111.826962d5.js  124.e3b03533.js  124.e3b03533.js.map  126.8a53334f.js  (+317 more)
src/: App.vue  main.ts
src/geneticTask/: .gitignore  CMakeLists.txt  main.cpp
src/geneticTask/lib/: dependencies.cpp  dependencies.h  gentic_coefficients.h  line.cpp  line.h  matrix.cpp  matrix.h  scope.cpp  scope.h  souce_code.cpp  source_code.cpp  source_code.h  utils.cpp  utils.h  words.cpp  words.h
(+165 files in other folders)
